Updated user routes
